--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Fancy Volcanos </title>
+    <title>Fancy Volcanos</title>
   </head>
   <body>
   <h1>Fancy Volcanos</h1>
@@ -14,7 +14,24 @@
     <img src="file:///Users/apple/Desktop/PhotoGallery/assets/2-SmokeVolcano.jpg" alt="volcano">
     <img src="file:///Users/apple/Desktop/PhotoGallery/assets/2-lava.jpg" alt="lava">
     <img src="file:///Users/apple/Desktop/PhotoGallery/assets/3-volcano.jpg" alt="volcano">
-    <img src="" alt="">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/3-lava.jpg" alt="lava">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/4-lava.jpg" alt="lava">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/4-volcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/5-lava.jpg" alt="lava">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/5-volcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/6-volcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/8-volcano.jpeg" alt="lava">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/7-volcano.jpeg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/9-volcano.png" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/10-volcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/12-volcano.jpeg" alt="lava">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/Asia-Volcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/LavaSpilling.jpg" alt="lava">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/LightnigVolcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/LavaSpecs.jpg" alt="LavaSpecs">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/Smoky-Volcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/PersonVolcano.jpg" alt="volcano">
+    <img src="file:///Users/apple/Desktop/PhotoGallery/assets/0-volcano.jpg" alt="volcano">
     </div>
   </body>
 </html>
